--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 </div>
 
 <ul>
-                
+ <ul> 
+<li><a href="index.html">home</a></li>
+<li><a href="principal.html">principal</a> ></li>
+<li><a href="contato.html">contato</a></li>
+
+
+ </ul>               
 
 
 <div class="beneficios">
